# cra

./: .prettierrc  LICENSE  README.md  hardhat.config.ts  package.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: run_static_analysis.yml  run_tests.yml  slither.yml
contracts/: CRA.sol  CRATestable.sol  GDA.sol  GDATestable.sol  NZA.sol  NZATestable.sol
scripts/: deployCRA.ts  deployGDA.ts  deployNZA.ts
simulation/: README.md  cra.py  data.py  gda.py  main.py  nza.py  pyproject.toml
simulation/sim_data/: azuki-6360cf85-97e9-4cb5-80e6-4240f2a2d59d.csv  moonbirds-8f01836d-d6e5-44d0-94e3-3e9ef70855d8.csv
test/: CRA.test.ts  GDA.test.ts  NZA.test.ts
