[tool.poetry]
name = "CRASimulation"
version = "1.0.0"
description = "Simulation of the CRA dynamic mint pricing model."
authors = ["will@yoz.gg"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^22.3.0"
seaborn = "^0.11.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
